# backend/docs/swagger.yaml
@@ -1,4 +1,80 @@
+definitions:
+  api.genericErrorResponse:
+    properties:
+      error:
+        type: string
+    type: object
+  api.shortenUrlRequest:
+    properties:
+      expiresAt:
+        description: needs to be RFC3339 with timezone (or UTC)
+        type: string
+      originalUrl:
+        type: string
+      slug:
+        type: string
+    required:
+    - originalUrl
+    type: object
+  api.shortenUrlResponse:
+    properties:
+      shortUrl:
+        type: string
+    type: object
 info:
   contact: {}
-paths: {}
+paths:
+  /{slug}:
+    get:
+      description: Redirects the user to the original URL in the link
+      parameters:
+      - description: Slug
+        in: path
+        name: slug
+        required: true
+        type: string
+      responses:
+        "307":
+          description: Temporary redirect to URL
+        "400":
+          description: link expired
+          schema:
+            $ref: '#/definitions/api.genericErrorResponse'
+        "404":
+          description: link not found
+          schema:
+            $ref: '#/definitions/api.genericErrorResponse'
+        "500":
+          description: internal error
+          schema:
+            $ref: '#/definitions/api.genericErrorResponse'
+      summary: Redirect from short link
+  /shorten:
+    post:
+      consumes:
+      - application/json
+      description: Returns a shortened link for the given URL
+      parameters:
+      - description: Request body
+        in: body
+        name: body
+        required: true
+        schema:
+          $ref: '#/definitions/api.shortenUrlRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/api.shortenUrlResponse'
+        "400":
+          description: slug already used
+          schema:
+            $ref: '#/definitions/api.genericErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/api.genericErrorResponse'
+      summary: Shorten an URL
 swagger: "2.0"
